fix: fix like conter
